# demerit-system

./: .gitignore  README.md  start.sh
backend/: Cargo.toml  demerit.db
backend/src/: main.rs  models.rs
backend/src/database/: db.rs  init_db.rs  mod.rs  schema.sql
backend/src/handlers/: admin.rs  auth.rs  demerit.rs  mod.rs  parent.rs  student.rs  teacher.rs  time.rs  upload.rs
backend/src/models/: mod.rs
backend/src/services/: auth.rs
backend/uploads/: 3b052a87-f5e2-4609-9115-194de90712e3_Book1.csv  98511f22-86ec-429c-8b80-d0242069c87e_Book1.csv
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AddDemeritForm.css  AddDemeritForm.tsx  AdminDataTable.tsx  AuthForm.css  AuthForm.tsx  Clock.css  Clock.tsx  CsvUploader.css  CsvUploader.tsx  DataTable.css  DataTable.tsx  DataVisualizationPanel.css  DataVisualizationPanel.tsx  DemeritHistory.css  DemeritHistory.tsx  EditUserModal.css  EditUserModal.tsx  Form.css  Form.tsx  ParentChildManager.tsx  ParentChildSummary.tsx  ProtectedRoute.tsx  StudentDashboardSummary.tsx  StudentDemeritSummary.tsx  StudentDetailModal.tsx
frontend/src/contexts/: UserContext.tsx
frontend/src/pages/: AdminDashboard.css  AdminDashboard.tsx  ParentDashboard.css  ParentDashboard.tsx  StudentDashboard.tsx  TeacherDashboard.css  TeacherDashboard.tsx
frontend/src/types/: demerit.ts  user.ts
