[package]
name = "demerit-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0", features = ["sqlite", "chrono"] }
dotenv = "0.15"
jsonwebtoken = "8.0"
chrono = "0.4"
bcrypt = "0.13"
rusqlite = "0.33.0"
serde_json = "1.0.139"
actix-multipart = "0.6"
futures = "0.3"
uuid = { version = "1.3", features = ["v4"] }
csv = "1.1"
rand = "0.8"
